// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component button-bar styling renders 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bczRLJ kWkDUg"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-collection="react-aria-16"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-17"
      role="tablist"
    >
      <div
        aria-controls="react-aria-17-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-collection="react-aria-16"
        data-key="one"
        data-rac=""
        data-react-aria-pressable="true"
        data-selected="true"
        id="react-aria-17-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-16"
        data-key="two"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-17-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-16"
        data-key="three"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-17-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-17-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-17-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component button-bar styling renders large size 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bczRLJ kTnZrf"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-collection="react-aria-26"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-27"
      role="tablist"
    >
      <div
        aria-controls="react-aria-27-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-collection="react-aria-26"
        data-key="one"
        data-rac=""
        data-react-aria-pressable="true"
        data-selected="true"
        id="react-aria-27-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-26"
        data-key="two"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-27-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-26"
        data-key="three"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-27-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-27-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-27-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component button-bar styling renders small size 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bczRLJ kFnuyo"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-collection="react-aria-21"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-22"
      role="tablist"
    >
      <div
        aria-controls="react-aria-22-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-collection="react-aria-21"
        data-key="one"
        data-rac=""
        data-react-aria-pressable="true"
        data-selected="true"
        id="react-aria-22-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-21"
        data-key="two"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-22-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-21"
        data-key="three"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-22-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-22-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-22-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component normal styling renders 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bczRLJ lljHPQ"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-collection="react-aria-1"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-2"
      role="tablist"
    >
      <div
        aria-controls="react-aria-2-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-collection="react-aria-1"
        data-key="one"
        data-rac=""
        data-react-aria-pressable="true"
        data-selected="true"
        id="react-aria-2-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-1"
        data-key="two"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-2-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-1"
        data-key="three"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-2-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-2-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-2-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component normal styling renders large size 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bczRLJ AsoTD"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-collection="react-aria-11"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-12"
      role="tablist"
    >
      <div
        aria-controls="react-aria-12-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-collection="react-aria-11"
        data-key="one"
        data-rac=""
        data-react-aria-pressable="true"
        data-selected="true"
        id="react-aria-12-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-11"
        data-key="two"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-12-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-11"
        data-key="three"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-12-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-12-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-12-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component normal styling renders small size 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-bczRLJ mEdVR"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-collection="react-aria-6"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-7"
      role="tablist"
    >
      <div
        aria-controls="react-aria-7-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-collection="react-aria-6"
        data-key="one"
        data-rac=""
        data-react-aria-pressable="true"
        data-selected="true"
        id="react-aria-7-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-6"
        data-key="two"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-7-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-collection="react-aria-6"
        data-key="three"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-7-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-7-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-7-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;
